Mon Jun 21 13:29:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/control:
          Fixed some version numbers

        * debian/patches/00list:
          Removed some patches we zapped in the past

          Thanks to David Ward <dpward at mit dot edu> for reporting this.

Mon Jun 21 09:41:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/BidirStreamBuffer.cpp:
        * protocols/ace/INet/BidirStreamBuffer.h:
        * protocols/ace/INet/BufferedStreamBuffer.cpp:
        * protocols/ace/INet/BufferedStreamBuffer.h:
        * protocols/ace/INet/ClientRequestHandler.cpp:
        * protocols/ace/INet/ClientRequestHandler.h:
        * protocols/ace/INet/ConnectionCache.cpp:
        * protocols/ace/INet/ConnectionCache.h:
        * protocols/ace/INet/HeaderBase.cpp:
        * protocols/ace/INet/HeaderBase.h:
        * protocols/ace/INet/HTTP_ClientRequestHandler.cpp:
        * protocols/ace/INet/HTTP_ClientRequestHandler.h:
        * protocols/ace/INet/HTTP_Header.cpp:
        * protocols/ace/INet/HTTP_Header.h:
        * protocols/ace/INet/HTTP_IOStream.cpp:
        * protocols/ace/INet/HTTP_IOStream.h:
        * protocols/ace/INet/HTTP_Request.cpp:
        * protocols/ace/INet/HTTP_Request.h:
        * protocols/ace/INet/HTTP_Response.cpp:
        * protocols/ace/INet/HTTP_Response.h:
        * protocols/ace/INet/HTTP_Session.cpp:
        * protocols/ace/INet/HTTP_Session.h:
        * protocols/ace/INet/HTTP_Status.cpp:
        * protocols/ace/INet/HTTP_Status.h:
        * protocols/ace/INet/HTTP_StreamPolicyBase.cpp:
        * protocols/ace/INet/HTTP_StreamPolicyBase.h:
        * protocols/ace/INet/HTTP_StreamPolicy.cpp:
        * protocols/ace/INet/HTTP_StreamPolicy.h:
        * protocols/ace/INet/HTTP_URL.cpp:
        * protocols/ace/INet/HTTP_URL.h:
        * protocols/ace/INet/HTTP_URL.inl:
        * protocols/ace/INet/IOS_util.cpp:
        * protocols/ace/INet/IOS_util.h: