@@ -200,8 +200,9 @@ namespace ACE
       }
 
     template <class ACE_CHAR_T, class TR>
-    String_IStreamBase<ACE_CHAR_T, TR>::String_IStreamBase(string_type& string)
-      : String_IOSBase<ACE_CHAR_T, TR> (string, std::ios::in),
+    String_IStreamBase<ACE_CHAR_T, TR>::String_IStreamBase(const string_type& string)
+      : String_IOSBase<ACE_CHAR_T, TR> (const_cast<string_type&> (string),
+                                        std::ios::in),
         std::basic_istream<ACE_CHAR_T, TR> (String_IOSBase<ACE_CHAR_T, TR>::rdbuf ())
       {
       }
