@@ -1,3 +1,12 @@
+Tue Jun 22 07:47:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * protocols/ace/INet/String_IOStream.cpp:
+        * protocols/ace/INet/String_IOStream.h:
+	  Const change:
+
+        * protocols/ace/INet/URLBase.inl:
+	  Fixed missing ACE_INLINE.
+
 Mon Jun 21 13:29:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * debian/control:
